@@ -2,6 +2,7 @@ Changes in 3.3.0
 ????-??-??
 
 - New things:
+  - CAPI: GEOSBufferWithParams (allows single sided buffers)
   - CAPI: GEOSOffsetCurve deprecates GEOSSingleSidedBuffer
   - CAPI: GEOSUnaryUnion deprecates GEOSCascadedUnion
   - CAPI: GEOSisValidDetail: tell state, reason & location apart. allows
